--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ background-size:cover;
 width:450px;
 margin:75px 275px;
 height:450px;
-background-color:green;
+background-color:yellow;
 }
 
 #mpc button{
